# geoidlab

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: tests.yml
Notebooks/: DEM.ipynb  Global Gravity Model.ipynb  Gravity Anomaly.ipynb  ICGEM.ipynb  Kernels.ipynb  Legendre.ipynb  MeanTideGravity.xlsx
cli/: compute_geoid.py  download.py  easy-pygeoid.py
cli/commands/: download.py
cli/tools/: download_data.py  gravity_reduction.py  reference_quantities.py  terrain_quantities.py
docs/: conf.py  contents.rst  geoidlab.cfg  index.md  installation.md  introduction.md  requirements.txt
docs/api/: index.md
docs/examples/: basic_usage.md  index.md
docs/usage/: index.md
easy_pygeoid/: dtm.py  geoid.py  legendre.py  terrain.py  tide.py
easy_pygeoid/utils/: distances.py  interpolators.py  io.py  parallel_utils.py
geoidlab/: __init__.py  __version__.py  constants.py  coordinates.py  curtin.py  dem.py  density.py  dtm.py  geoid.py  geoidn.py  ggm.py  ggm_tools.py  gravity.py  height.py  icgem.py  legendre.py  plot.py  preprocessing.py  shtools.py  stokes_func.py  terrain.py  tide.py  tide1.py
geoidlab/cli/: geoidApp.py  main.py
geoidlab/mapping/: colormaps.py
geoidlab/numba/: dtm.py  ggm.py  legendre.py  terrain.py
geoidlab/utils/: colormaps.py  io.py  (+3 more)
src/: constants.py  coordinates.py  dem.py  dtm.py  geoidtools.py  ggm_geoid.py  ggm_tools.py  gravity.py  icgem.py  kernels.py  legendre.py  plot.py  shtools.py  tide.py  tide_system.py
tests/: test_cli.py  test_constants.py  test_geoid_inputs.py
(+64 files in other folders)
