[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'geoidlab'
version = '1.0.0'
description = 'A Modular and Automated Python Package for Geoid Computation'
authors = [
    { name='Caleb Kelly', email='calebaid2000@gmail.com' }
]
readme = 'README.md'
license = { file='LICENSE' }
requires-python = '>=3.8'
dependencies = [
    'numpy',
    'scipy',
    'matplotlib',
    'xarray',
    'netCDF4',
    'numba',
    'pyproj',
    'tqdm',
    'beautifulsoup4',
    'pandas',
    'xarray',
    'netCDF4',
    'scipy',
    'numba',
    'numba-progress',
    'openpyxl',
    'rasterio',
    'rioxarray',
    'bottleneck',
    'scikit-learn',
    'joblib>=1.3.0',
    'basemap'
]

[project.urls]
Homepage = 'https://github.com/cikelly/geoidlab'
Documentation = 'https://yourdocs.example.com'

[project.scripts]
geoidlab = 'geoidlab.cli.main:main'


[tool.setuptools.packages.find]
where = ['geoidlab']
include = ['geoidlab*']
